added css format, renamed scss and added prefix for tokens in css

--- a/packages/mosaic/button-toggle/button-toggle.scss
+++ b/packages/mosaic/button-toggle/button-toggle.scss
@@ -1,4 +1,4 @@
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 @import '../core/styles/common/vendor-prefixes';
 @import '../core/styles/common/layout';
 @import '../../cdk/a11y/a11y';
