--- a/packages/mosaic/button/button.scss
+++ b/packages/mosaic/button/button.scss
@@ -1,6 +1,6 @@
 @import '../core/styles/common/layout';
 
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 
 @import 'button-base';
 
