--- a/packages/mosaic/divider/divider.scss
+++ b/packages/mosaic/divider/divider.scss
@@ -1,4 +1,4 @@
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 
 
 // This mixin provides the correct offset for an inset divider based on the
