--- a/packages/mosaic/modal/modal.scss
+++ b/packages/mosaic/modal/modal.scss
@@ -1,5 +1,5 @@
 @import '../core/styles/variables';
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 
 @import './modal-confirm';
 
