--- a/packages/mosaic/popover/popover.scss
+++ b/packages/mosaic/popover/popover.scss
@@ -1,4 +1,4 @@
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 @import '../core/styles/variables';
 @import '../core/theming/theming';
 @import '../core/styles/typography/typography-utils';
