--- a/packages/mosaic/autocomplete/autocomplete.scss
+++ b/packages/mosaic/autocomplete/autocomplete.scss
@@ -1,5 +1,5 @@
 @import '../../cdk/a11y/a11y';
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 
 
 .mc-autocomplete-trigger {
