--- a/packages/mosaic/core/styles/_badges.scss
+++ b/packages/mosaic/core/styles/_badges.scss
@@ -1,4 +1,4 @@
-@import '../../design-tokens/index';
+@import '../../design-tokens/tokens';
 @import '../theming/theming';
 @import '../styles/typography/typography-utils';
 
