--- a/packages/mosaic/core/styles/typography/_typography-utils.scss
+++ b/packages/mosaic/core/styles/typography/_typography-utils.scss
@@ -1,5 +1,5 @@
 @import 'variables';
-@import '../../../design-tokens/index';
+@import '../../../design-tokens/tokens';
 
 
 @function mc-typography-level(
