--- a/packages/mosaic/core/styles/typography/_variables.scss
+++ b/packages/mosaic/core/styles/typography/_variables.scss
@@ -1,4 +1,4 @@
-@import '../../../design-tokens/index';
+@import '../../../design-tokens/tokens';
 
 $typography-font-weight-values: (
     thin: 100,
