--- a/packages/mosaic/select/select.scss
+++ b/packages/mosaic/select/select.scss
@@ -1,4 +1,4 @@
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 @import '../core/option/option';
 @import '../core/styles/common/vendor-prefixes';
 
