--- a/packages/mosaic/sidepanel/sidepanel.scss
+++ b/packages/mosaic/sidepanel/sidepanel.scss
@@ -1,4 +1,4 @@
-@import '../design-tokens/index';
+@import '../design-tokens/tokens';
 @import '../core/styles/common/button';
 @import '../core/styles/common/list';
 
